# yt-tutor

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DEMO.md  DESIGN.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  MANUAL.md  demo.tape
docs/examples/: README.md
docs/examples/cfp-lesson/: lesson.html
references/: cli.md
scripts/: make_demo_gif.py
tests/: test_chunks.py  test_config.py  test_estimate.py  test_frames.py  test_qa.py  test_smoke.py  test_teach_export.py  test_transcribe.py  test_util.py  test_verify.py  test_vision.py  test_visual_index.py  test_vtt.py
yt_tutor/: __init__.py  cli.py  config.py  db.py  errors.py  estimate.py  teach_export.py  util.py  verify.py
yt_tutor/pipeline/: __init__.py  audio.py  captions.py  chunks.py  frames.py  metadata.py  runner.py  summary.py  transcribe.py  vision.py
yt_tutor/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
yt_tutor/qa/: __init__.py  ask.py  digest.py  search.py
